2009-12-17  Miguel de Dios  <miguel.dedios@artica.es>

	* pandora_console/extensions/update_manager/load_updatemanager.php: add more
	info (Pandora version and build) to statistics in update process.

2009-12-16  Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php, DEBIAN/make_deb_package.sh: Preparing
	release	changing version to final.

2009-12-16  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/modules/manage_network_components.php: fix re-duplicate modules
	now only generate one copy.
	Fixes: 2915470

2009-12-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: fix print image error as tag <image> instead content
	file when there is error in data string. And add new type of graph, error
	graph.
	Fixes: 2908174

2009-12-16  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: fix the days in the last dates.

2009-12-16  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_servers.php: tiny fix (a zero division) the tactical
	view when start with a empty Pandora. 
	
2009-12-15  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: fix in the function "grafico_modulo_boolean" for
	show correct graph, and clean source code.
	* include/functions_extensions.php: change include_once to require_once for
	more security.
	Fixes: 2883786

2009-12-15  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_fsgraph.php: Fixed bug #2913813.

2009-12-14  Miguel de Dios  <miguel.dedios@artica.es>

	* ChangeLog: fix before copy&paste.

2009-12-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/swiftmailer/* : add the library "Swift Mailer" for make more
	easy and less bugs the source code.

2009-12-13  Raul Mateos  <raulofpandora@gmail.com>

	* include/styles/pandora.css: Changed some colours.

	* godmode/reporting/map_builder_wizard.php: Updated title.

2009-12-09  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_db.php: change the function